# agent-bridge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  one-person-ai-operating-system.md
docs/launch/: RELEASE-CHECKLIST.md  SANITIZATION-REPORT.md  awesome-list-entry.md  build-in-public-thread.md  show-hn.md
src/agent_bridge/: __init__.py  __main__.py  config.py  db.py  server.py
src/agent_bridge/tools/: __init__.py  activity.py  context.py  export.py  handoffs.py  health.py  recall.py  snapshots.py
tests/: conftest.py  test_activity.py  test_config.py  test_context.py  test_db.py  test_export.py  test_handoffs.py  test_health.py  test_recall.py  test_snapshots.py
