[project]
name = "AgenticBridge"
version = "0.1.2"
description = "A SQLite-backed MCP server that gives your AI coding agents a shared memory bus."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Saagar Patel" }]
keywords = ["mcp", "ai-agents", "claude", "coordination", "sqlite", "fts5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
]
dependencies = [
    "aiosqlite>=0.20",
    "mcp>=1.2,<2.0",
]

[project.scripts]
agent-bridge = "agent_bridge.__main__:main"

[project.urls]
Homepage = "https://github.com/saagpatel/agent-bridge"
Repository = "https://github.com/saagpatel/agent-bridge"
Issues = "https://github.com/saagpatel/agent-bridge/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]  # asserts are fine in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
